--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,10 +1,32 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/index.js",
   "name": "@communitii/mobile",
   "private": true,
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
+    "firebase": "^4.13.1",
+    "native-base": "^2.4.3",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-navigation": "^1.5.11",
+    "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.0.6",
+    "redux": "^4.0.0",
+    "redux-firestore": "^0.4.3",
+    "redux-observable": "^0.18.0",
+    "rxjs": "^6.0.0"
+  },
+  "scripts": {
+    "add:l": "lerna add --scope=@communitii/mobile",
+    "start": "exp start",
+    "start:ios": "exp ios"
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "exp": "^53.1.0"
   }
 }
