added redux-firebase and redux-thunk of DB and async actions

--- a/apps/mobile/.babelrc
+++ b/apps/mobile/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["babel-preset-expo", "es2017", "stage-0"],
+  "presets": ["babel-preset-expo", "es2017", "stage-0", "react-native-dotenv"],
   "plugins": [
     "transform-decorators-legacy",
     [
